Refactored some code and changed behavior

--- a/arkivskaber-open.html
+++ b/arkivskaber-open.html
@@ -42,18 +42,22 @@
               <a class="nav-link active" href="#">Arkivskaber</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#heuristiskenhed"
+              <a class="nav-link text-muted" href="/index.html#heuristiskenhed"
                 >Heuristisk enhed</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Arkiveringsversion</a>
+              <a class="nav-link text-muted" href="/index.html"
+                >Arkiveringsversion</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Eksemplar</a>
+              <a class="nav-link text-muted" href="/index.html">Eksemplar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Arbejdsopgaver</a>
+              <a class="nav-link text-muted" href="/index.html"
+                >Arbejdsopgaver</a
+              >
             </li>
           </ul>
         </div>
@@ -64,14 +68,7 @@
         <div class="col-10 col-centered">
           <div class="card special bg-white pt-3 pr-5 pl-5 pb-5">
             <div class="card-body">
-              <p>
-                <a
-                  href="/arkivskaber.html"
-                  class="text-secondary mt-4 btn-block"
-                  >&laquo; Tilbage til søgning</a
-                >
-              </p>
-              <span class="badge badge-pill badge-secondary mt-5 mb-4"
+              <span class="badge badge-primary badge-pill mt-3 mb-4"
                 >Arkivskaber</span
               >
               <h1 class="font-weight-extrabold">Frederiksberg Politi</h1>
@@ -178,7 +175,7 @@
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card bg-white mt-3">
+                        <div class="card bg-light mt-3">
                           <div class="card-body p-0">
                             <h4 class="font-weight-bold mt-3 ml-3">Navne</h4>
                             <div class="dataTables_scroll">
@@ -325,7 +322,7 @@
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card bg-white mt-3">
+                        <div class="card bg-light mt-3">
                           <div class="card-body p-0">
                             <h4 class="font-weight-bold ml-3 mt-3">
                               Heuristiske enheder
@@ -350,7 +347,7 @@
                                 <tbody>
                                   <tr
                                     class="clickable-row"
-                                    data-href="/heuristikenhed-open.html"
+                                    data-href="#target"
                                   >
                                     <td>Ordensmagt Røverier</td>
                                     <td>
@@ -400,7 +397,7 @@
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card bg-white mt-3 p-lg-3">
+                        <div class="card bg-light mt-3 p-lg-3">
                           <div class="card-body">
                             <div class="row">
                               <div class="col-sm-6">
@@ -449,17 +446,31 @@
                                   din præsentation og vil nu udskrive
                                   uddelingskopier til dit publikum.
                                 </p>
-              <button class="btn btn-outline-primary d-flex align-items-center" data-toggle="modal" data-target="#redigerArkivskaber">
-                <svg height="16px" version="1.1" viewBox="0 0 16 16" class="mr-2" width="16px" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <g transform="translate(-384.000000, -192.000000)">
-                    <path
-                      d="M385,203.950806 L389,208 L385,208 Z M392,196 L396,200 L389.978638,207.044189 L386,203 Z M394.084619,193.781497 C394.709458,193.156658 395.90929,193.343426 396.764518,194.198654 L397.538782,194.972918 C398.394011,195.828147 398.580778,197.027979 397.95594,197.652817 L396.720394,198.888363 L392.849074,195.017043 Z M394.084619,193.781497"
-                      id="Triangle 313" />
-                  </g>
-                </svg>
-                <span>Rediger</span>
-              </button>
+                                <button
+                                  class="btn btn-outline-primary d-flex align-items-center"
+                                  data-toggle="modal"
+                                  data-target="#redigerArkivskaber"
+                                >
+                                  <svg
+                                    height="16px"
+                                    version="1.1"
+                                    viewBox="0 0 16 16"
+                                    class="mr-2"
+                                    width="16px"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                                  >
+                                    <g
+                                      transform="translate(-384.000000, -192.000000)"
+                                    >
+                                      <path
+                                        d="M385,203.950806 L389,208 L385,208 Z M392,196 L396,200 L389.978638,207.044189 L386,203 Z M394.084619,193.781497 C394.709458,193.156658 395.90929,193.343426 396.764518,194.198654 L397.538782,194.972918 C398.394011,195.828147 398.580778,197.027979 397.95594,197.652817 L396.720394,198.888363 L392.849074,195.017043 Z M394.084619,193.781497"
+                                        id="Triangle 313"
+                                      />
+                                    </g>
+                                  </svg>
+                                  <span>Rediger</span>
+                                </button>
                               </div>
                             </div>
                           </div>
@@ -479,7 +490,7 @@
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card bg-white mt-3">
+                        <div class="card bg-light mt-3">
                           <div class="card-body p-0">
                             <h4 class="font-weight-bold ml-3 mt-3">
                               Overordnede aktører
@@ -539,7 +550,7 @@
                             </table>
                           </div>
                         </div>
-                        <div class="card bg-white mt-5">
+                        <div class="card bg-light mt-5">
                           <div class="card-body p-0">
                             <h4 class="font-weight-bold ml-3 mt-3">
                               Underordnede aktører
@@ -614,7 +625,7 @@
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card bg-white mt-3">
+                        <div class="card bg-light mt-3">
                           <div class="card-body p-0">
                             <h4 class="font-weight-bold ml-3 mt-3">
                               Henvisninger
