--- a/heuristikenhed-open.html
+++ b/heuristikenhed-open.html
@@ -39,7 +39,7 @@
         <div class="col-10 mt-5 col-centered">
           <ul class="nav nav-tabs">
             <li class="nav-item">
-              <a class="nav-link" href="/">Arkivskaber</a>
+              <a class="nav-link text-muted" href="/">Arkivskaber</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/index.html#heuristiskenhed"
@@ -47,13 +47,17 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Arkiveringsversion</a>
+              <a class="nav-link text-muted" href="/index.html"
+                >Arkiveringsversion</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Eksemplar</a>
+              <a class="nav-link text-muted" href="/index.html">Eksemplar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Arbejdsopgaver</a>
+              <a class="nav-link text-muted" href="/index.html"
+                >Arbejdsopgaver</a
+              >
             </li>
           </ul>
         </div>
@@ -64,18 +68,9 @@
         <div class="col-10 col-centered">
           <div class="card special bg-white pt-3 pr-5 pl-5 pb-5">
             <div class="card-body">
-              <p>
-                <a
-                  href="/arkivskaber.html"
-                  class="text-secondary mt-4 btn-block"
-                  >&laquo; Tilbage til søgning</a
-                >
-              </p>
-
-              <span class="badge badge-pill badge-success mt-5 mb-4"
-                >Heuristisk Enhed</span
+              <span class="badge badge-success badge-pill mt-3 mb-4"
+                >Heuristisk enhed</span
               >
-
               <h1 class="font-weight-extrabold">Ordensmagt Røverier</h1>
               <h3 class="text-secondary">Ordenspolitiet, 1919 - 2006</h3>
               <p class="mt-4 mb-1 text-secondary">
@@ -180,7 +175,7 @@
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card bg-white mt-3">
+                        <div class="card bg-light mt-3">
                           <div class="card-body p-0">
                             <h4 class="font-weight-bold mt-3 ml-3">Navne</h4>
                             <div class="dataTables_scroll">
@@ -327,7 +322,7 @@
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card bg-white mt-3">
+                        <div class="card bg-light mt-3">
                           <div class="card-body">
                             <h4 class="font-weight-bold ml-3 mt-3">
                               Tider
@@ -349,7 +344,7 @@
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card bg-white mt-3 p-lg-3">
+                        <div class="card bg-light mt-3 p-lg-3">
                           <div class="card-body">
                             <div class="row">
                               <div class="col-sm-6">
@@ -398,7 +393,7 @@
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card bg-white mt-3">
+                        <div class="card bg-light mt-3">
                           <div class="card-body p-0">
                             <h4 class="font-weight-bold ml-3 mt-3">
                               Overordnede aktører
@@ -458,7 +453,7 @@
                             </table>
                           </div>
                         </div>
-                        <div class="card bg-white mt-5">
+                        <div class="card bg-light mt-5">
                           <div class="card-body p-0">
                             <h4 class="font-weight-bold ml-3 mt-3">
                               Underordnede aktører
@@ -533,7 +528,7 @@
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card bg-white mt-3">
+                        <div class="card bg-light mt-3">
                           <div class="card-body p-0">
                             <h4 class="font-weight-bold ml-3 mt-3">
                               Henvisninger
