--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   aria-labelledby="arkivskaber-tab"
                 >
                   <!-- arkivskaber start -->
-                  <form action="/arkivskaber.html">
+                  <form action="search/arkivskaber.html">
                     <div class="container-fluid">
                       <div class="row mb-3">
                         <div class="col-sm-12">
