--- a/search/arkivskaber.html
+++ b/search/arkivskaber.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,900"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/css/custom.css" />
+    <link rel="stylesheet" href="../src/css/custom.css" />
     <title>Daisy RA</title>
   </head>
 
@@ -16,8 +16,8 @@
     <div class="container-fluid">
       <div class="col-sm-10 col-centered">
         <nav class="navbar navbar-expand-lg navbar-white">
-          <a class="navbar-brand" href="/index.html">
-            <img src="src/images/logo.png" alt="" class="" />
+          <a class="navbar-brand" href="../index.html">
+            <img src="../src/images/logo.png" alt="" class="" />
           </a>
 
           <button
@@ -42,18 +42,18 @@
               <a class="nav-link active" href="#">Arkivskaber</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#heuristiskenhed"
+              <a class="nav-link" href="../index.html#heuristiskenhed"
                 >Heuristisk enhed</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Arkiveringsvers.</a>
+              <a class="nav-link" href="../index.html">Arkiveringsvers.</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Eksemplar</a>
+              <a class="nav-link" href="../index.html">Eksemplar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Opgave</a>
+              <a class="nav-link" href="../index.html">Opgave</a>
             </li>
           </ul>
         </div>
@@ -62,10 +62,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-10 col-centered">
-          <div class="card special">
+          <div class="card special pt-3 pl-3 pr-3 pb-3">
             <div class="card-body">
               <!-- arkivskaber start -->
-              <form action="/arkivskaber.html">
+              <form action="search/arkivskaber.html">
                 <div class="container-fluid">
                   <div class="row mb-3">
                     <div class="col-sm-4">
@@ -126,12 +126,12 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid mt-3">
       <div class="row">
         <div class="col-10 col-centered">
-          <div class="card bg-white mt-3 p-lg-3">
+          <div class="card bg-white pt-3 pr-5 pl-5 pb-5">
             <div class="card-body">
-              <h4 class="mb-4 ml-1">
+              <h4 class="mb-4 ml-1 mt-3">
                 <span class="font-weight-bold">33</span> resultater
               </h4>
               <div class="card">
@@ -152,9 +152,81 @@
                   <tbody>
                     <tr
                       class="clickable-row"
-                      data-href="/arkivskaber-open.html"
+                      data-href="../arkivskaber-open.html"
                     >
                       <td>Frederiksberg Pol</td>
+                      <td>
+                        FRB Politi
+                      </td>
+                      <td>1972</td>
+                      <td>1988</td>
+                      <td>12415DJJ</td>
+                    </tr>
+                    <tr class="clickable-row">
+                      <td>Frederiksberg Politi</td>
+                      <td>
+                        FRB Politi
+                      </td>
+                      <td>1972</td>
+                      <td>1988</td>
+                      <td>12415DJJ</td>
+                    </tr>
+                    <tr class="clickable-row">
+                      <td>Frederiksberg Politi</td>
+                      <td>
+                        FRB Politi
+                      </td>
+                      <td>1972</td>
+                      <td>1988</td>
+                      <td>12415DJJ</td>
+                    </tr>
+                    <tr class="clickable-row">
+                      <td>Frederiksberg Politi</td>
+                      <td>
+                        FRB Politi
+                      </td>
+                      <td>1972</td>
+                      <td>1988</td>
+                      <td>12415DJJ</td>
+                    </tr>
+                    <tr class="clickable-row">
+                      <td>Frederiksberg Politi</td>
+                      <td>
+                        FRB Politi
+                      </td>
+                      <td>1972</td>
+                      <td>1988</td>
+                      <td>12415DJJ</td>
+                    </tr>
+                    <tr class="clickable-row">
+                      <td>Frederiksberg Politi</td>
+                      <td>
+                        FRB Politi
+                      </td>
+                      <td>1972</td>
+                      <td>1988</td>
+                      <td>12415DJJ</td>
+                    </tr>
+                    <tr class="clickable-row">
+                      <td>Frederiksberg Politi</td>
+                      <td>
+                        FRB Politi
+                      </td>
+                      <td>1972</td>
+                      <td>1988</td>
+                      <td>12415DJJ</td>
+                    </tr>
+                    <tr class="clickable-row">
+                      <td>Frederiksberg Politi</td>
+                      <td>
+                        FRB Politi
+                      </td>
+                      <td>1972</td>
+                      <td>1988</td>
+                      <td>12415DJJ</td>
+                    </tr>
+                    <tr class="clickable-row">
+                      <td>Frederiksberg Politi</td>
                       <td>
                         FRB Politi
                       </td>
@@ -197,15 +269,15 @@
         </div>
       </div>
     </div>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
     <link
       rel="stylesheet"
       type="text/css"
-      href="node_modules/datatables.net-dt/css/jquery.dataTables.min.css"
+      href="../node_modules/datatables.net-dt/css/jquery.dataTables.min.css"
     />
-    <script src="src/js/script.js"></script>
+    <script src="../src/js/script.js"></script>
   </body>
 </html>
